Closed Bug 581317 Opened 14 years ago Closed 14 years ago

DoApplyRenderingChangeToTree needs to invalidate ThebesLayers for descendant frames

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
blocking2.0 --- final+

People

(Reporter: roc, Assigned: roc)

References

Details

Attachments

(2 files)

Attached file testcase #1
See https://bugzilla.mozilla.org/show_bug.cgi?id=579264#c17.

Testcase attached. The inner part of the square should always be exactly the same color as the border, but it doesn't get repainted. Refreshing the window by switching focus away causes a repaint.
Attached patch fixSplinter Review
Attachment #459773 - Flags: review?(tnikkel)
Attachment #459773 - Flags: review?(tnikkel) → review+
Whiteboard: [needs landing]
This is a regression and must clearly block.
blocking2.0: --- → final+
http://hg.mozilla.org/mozilla-central/rev/6acec0cadc4c
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: [needs landing]
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: