Bug 581317. DoApplyRenderingChangeToTree needs to invalidate the ThebesLayer contents of descendants. r=tnikkel